2005-11-06  Neil Williams <linux@codehelp.co.uk>

	* doc/build-osx.txt : Document some OSX-specific 
	build solutions

2005-11-06  Neil Williams <linux@codehelp.co.uk>

	* doc/RAW-NOTES : deleted
	* doc/misc-notes.txt : new version, compatible
	with doxygen.
	* doc/Makefile.am : use GNU sed to allow OSX build
	of tip of the day.
	* doc/README.build-system : Document changes in autogen.sh
	* configure.in : Allow make to use the already detected
	usable version of sed. Remove OSX hacks that are no
	longer required.

2005-11-05  David Hampton  <hampton@employees.org>

	* configure.in:
	* src/register/register-core/Makefile.am:
	* src/core-utils/Makefile.am:
	* src/gnc-module/test/mod-bar/Makefile.am:
	* src/gnc-module/test/mod-baz/Makefile.am:
	* src/gnc-module/test/mod-foo/Makefile.am:
	* src/gnc-module/Makefile.am:
	* src/report/report-gnome/Makefile.am:
	* src/business/business-core/Makefile.am:
	* src/business/business-gnome/Makefile.am:
	* src/business/dialog-tax-table/Makefile.am:
	* src/gnome-utils/Makefile.am:
	* src/engine/Makefile.am:
	* src/gnome/Makefile.am:
	* src/app-utils/Makefile.am: Pass the name of the guile executable
	from configure to the makefiles instead of hard-coding it.
	Requested by Peter O'Gorman to improve Mac OS X support.

	* src/gnome-utils/gnc-embedded-window.c:
	* src/gnome-utils/gnc-embedded-window.h:
	* src/gnome-utils/gnc-main-window.c:
	* src/gnome-utils/gnc-main-window.h:
	* src/gnome-utils/gnc-window.h: Cleanup usage of the
	PLUGIN_PAGE_LABEL define.

	* Various: Convert to newer method of allocating private data
	structures for objects.  This allows glib to consolidate the space
	for all of the various public and private data structures on an
	object and reduce memory fragmentation.  Change all data structure
	declarations of the parent object to be the actual name of the
	object instead of the string "parent".  This makes debugging
	easier when looking at data structures in gdb.
