@@ -1,3 +1,8 @@
+2005-11-06  Christian Stimming  <stimming@tuhh.de>
+
+	* autogen.sh: Revert autogen.sh simplificatoin for now; to be
+	reconsidered after more testing.
+
 2005-11-06  Neil Williams <linux@codehelp.co.uk>
 
 	* doc/build-osx.txt : Document some OSX-specific 
